# lightbender

./: CMakeLists.txt  LICENSE  README.md
examples/: turing.r
gui/: draw.cpp  draw.h  main.cpp  main.h
shaders/: normalmapping.frag  normalmapping.vert  pointlight.frag  pointlight.vert  pointlight_shadow.frag  pointlight_shadow.vert  reliefmapping.frag  reliefmapping.vert  renderDepth.vert  spotlight_shading.frag  spotlight_shading.vert  texturing.frag  texturing.vert
src/: CMakeLists.txt  lightbender.cpp  lightbender.h  main.cpp  ws.h
src/mascgl-3/: CMakeLists.txt  camera.cpp  camera.h  draw_basics.cpp  draw_basics.h  light.h  model.cpp  model.h  objReader.h  objWriter.h  shader.cpp  shader.h  tangentspace.h  texture.h
src/mascgl-3/soil/: CMakeLists.txt
src/mathtool/: CMakeLists.txt  Matrix.h  Vector.h
src/modelgraph/: ModelEdge.h  ModelGraph.h  ModelNode.h
